--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "black>=25.1.0",
+    "elevenlabs>=1.57.0",
     "flake8>=7.2.0",
+    "graphiti-core>=0.11.3",
     "isort>=6.0.1",
+    "modal>=0.74.39",
+    "openai>=1.76.2",
     "pre-commit>=4.2.0",
 ]
