--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,19 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "black>=25.1.0",
-    "elevenlabs>=1.57.0",
+    "elevenlabs==1.54.0",
+    "fastapi>=0.115.12",
     "flake8>=7.2.0",
     "graphiti-core>=0.11.3",
     "isort>=6.0.1",
     "modal>=0.74.39",
     "openai>=1.76.2",
     "pre-commit>=4.2.0",
+    "psycopg2-binary>=2.9.10",
+    "python-dotenv>=1.1.0",
+    "sqlalchemy>=2.0.40",
+    "sqlmodel>=0.0.24",
+    "twilio>=9.5.2",
+    "uvicorn>=0.34.2",
+    "websockets>=15.0.1",
 ]
