onboarding system prompt done

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,32 +3,17 @@ name = "her-backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
-    "black>=25.1.0",
-    "elevenlabs==1.54.0",
-    "fastapi>=0.115.12",
-    "flake8>=7.2.0",
-    "google-genai>=1.13.0",
-    "graphiti-core[google-genai]>=0.11.3",
-    "isort>=6.0.1",
-    "modal>=0.74.39",
-    "openai>=1.76.2",
-    "pre-commit>=4.2.0",
-    "requests>=2.32.3",
-    "psycopg2-binary>=2.9.10",
-    "python-dotenv>=1.1.0",
-    "sqlalchemy>=2.0.40",
-    "sqlmodel>=0.0.24",
-    "twilio>=9.5.2",
-    "uvicorn>=0.34.2",
-    "websockets>=15.0.1",
-    "zep-cloud>=2.12.1",
-    "autopep8>=2.3.2",
+    "azure-core>=1.30.0",
+    "azure-identity>=1.15.0",
+    "elevenlabs>=0.2.26",
+    "fastapi>=0.89.0",
+    "graphiti-core>=0.1.0",
+    "modal>=0.54.3",
+    "neo4j>=5.0.0",
+    "openai>=1.6.0",
+    "pydantic>=2.0.0",
+    "python-dotenv>=1.0.0",
+    "uvicorn>=0.24.0",
 ]
-
-[tool.isort]
-profile = "black"
-line_length = 79
-multi_line_output = 3
-include_trailing_comma = true
