--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,5 +16,5 @@ dependencies = [
     "pydantic>=2.0.0",
     "python-dotenv>=1.0.0",
     "uvicorn>=0.24.0",
-    "zep-python>=2.0.2",
+    "zep-cloud>=2.16.0",
 ]
